--- a/index.html
+++ b/index.html
@@ -11,10 +11,70 @@
       BIG FANCY PIC
     </div>
     <div id="icons">
-      <!-- TODO: spans for icons -->
+        <span>ICON</span>
+        <span>ICON</span>
+        <span>ICON</span>
+        <span>ICON</span>
+        <span>ICON</span>
+        <span>ICON</span><!-- TODO: spans for icons -->
     </div>
     <div id="mini-layout">
-      <!-- TODO: Spans for four-item wide mini-layout -->
+        <span>
+            <div>
+                <img src="Your choice of placeholder image" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </span>
+        <span>
+            <div>
+                <img src="Your choice of placeholder image" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </span>
+        <span>
+            <div>
+                <img src="Your choice of placeholder image" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </span>
+        <span>
+            <div>
+                <img src="Your choice of placeholder image" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </span><!-- TODO: Spans for four-item wide mini-layout -->
     </div>
   </body>
 </html>
