--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="pic">
-      BIG FANCY PIC
+        <div>
+            <img src="http://placekitten.com/500/150" alt="Big Cat Pic">
+        </div>
     </div>
     <div id="icons">
         <span>ICON</span>
@@ -21,7 +23,7 @@
     <div id="mini-layout">
         <span>
             <div>
-                <img src="Your choice of placeholder image" alt="Pic">
+                <img src="https://www.placecage.com/200/300" alt="A calm Cage">
             </div>
             <div>
                 <strong>Bold Title</strong>
@@ -35,7 +37,7 @@
         </span>
         <span>
             <div>
-                <img src="Your choice of placeholder image" alt="Pic">
+                <img src="https://www.placecage.com/g/200/300" alt="Black and white Cage">
             </div>
             <div>
                 <strong>Bold Title</strong>
@@ -49,7 +51,7 @@
         </span>
         <span>
             <div>
-                <img src="Your choice of placeholder image" alt="Pic">
+                <img src="https://www.placecage.com/c/200/300" alt="Crazy Cage">
             </div>
             <div>
                 <strong>Bold Title</strong>
@@ -63,7 +65,7 @@
         </span>
         <span>
             <div>
-                <img src="Your choice of placeholder image" alt="Pic">
+                <img src="https://place-puppy.com/100x100" alt="A curious puppy">
             </div>
             <div>
                 <strong>Bold Title</strong>
