added descriptions and links

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <img src="https://www.placecage.com/200/300" alt="A calm Cage">
             </div>
             <div>
-                <strong>Bold Title</strong>
+                <strong>A Calm Cage</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>Not the Bees!</p>
             </div>
             <div>
-                <a href="Your choice of link">Link text</a>
+                <a href="Your choice of link">Nick Cage Fan Club Here!</a>
             </div>
         </span>
         <span>
@@ -40,41 +40,41 @@
                 <img src="https://www.placecage.com/g/200/300" alt="Black and white Cage">
             </div>
             <div>
-                <strong>Bold Title</strong>
+                <strong>Noire Cage</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>A black and white Cage.</p>
             </div>
             <div>
-                <a href="Your choice of link">Link text</a>
-            </div>
-        </span>
-        <span>
-            <div>
-                <img src="https://www.placecage.com/c/200/300" alt="Crazy Cage">
-            </div>
-            <div>
-                <strong>Bold Title</strong>
-            </div>
-            <div>
-                <p>A description</p>
-            </div>
-            <div>
-                <a href="Your choice of link">Link text</a>
+                <a href="Your choice of link">Nick Cage Film List Here!</a>
             </div>
         </span>
         <span>
             <div>
-                <img src="https://place-puppy.com/100x100" alt="A curious puppy">
+                <img src="http://placekitten.com/200/300" alt="Cute Kitten">
             </div>
             <div>
-                <strong>Bold Title</strong>
+                <strong>Kitten</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>A cute kitten.</p>
             </div>
             <div>
-                <a href="Your choice of link">Link text</a>
+                <a href="Your choice of link">More Kittens Here!</a>
+            </div>
+        </span>
+        <span>
+            <div>
+                <img src="https://place-puppy.com/200x300" alt="A curious puppy">
+            </div>
+            <div>
+                <strong>Puppy</strong>
+            </div>
+            <div>
+                <p>A curious bunch of puppies.</p>
+            </div>
+            <div>
+                <a href="Your choice of link">More Puppies Here!</a>
             </div>
         </span><!-- TODO: Spans for four-item wide mini-layout -->
     </div>
