--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
   </head>
   <body>
     <div id="pic">
@@ -13,17 +18,29 @@
         </div>
     </div>
     <div id="icons">
-        <span>ICON</span>
-        <span>ICON</span>
-        <span>ICON</span>
-        <span>ICON</span>
-        <span>ICON</span>
-        <span>ICON</span><!-- TODO: spans for icons -->
+        <span>
+            <i class="fas fa-camera"></i>
+        </span>
+        <span>
+            <i class="fas fa-anchor"></i>
+        </span>
+        <span>
+            <i class="fas fa-cat"></i>
+        </span>
+        <span>
+            <i class="fas fa-dog"></i>
+        </span>
+        <span>
+            <i class="fas fa-star"></i>
+        </span>
+        <span>
+            <i class="fas fa-diamond"></i>
+        </span>
     </div>
     <div id="mini-layout">
         <span>
             <div>
-                <img src="https://www.placecage.com/200/300" alt="A calm Cage">
+                <img src="https://www.placecage.com/100/100" alt="A calm Cage">
             </div>
             <div>
                 <strong>A Calm Cage</strong>
@@ -37,7 +54,7 @@
         </span>
         <span>
             <div>
-                <img src="https://www.placecage.com/g/200/300" alt="Black and white Cage">
+                <img src="https://www.placecage.com/g/100/100" alt="Black and white Cage">
             </div>
             <div>
                 <strong>Noire Cage</strong>
@@ -51,7 +68,7 @@
         </span>
         <span>
             <div>
-                <img src="http://placekitten.com/200/300" alt="Cute Kitten">
+                <img src="http://placekitten.com/100/100" alt="Cute Kitten">
             </div>
             <div>
                 <strong>Kitten</strong>
@@ -65,7 +82,7 @@
         </span>
         <span>
             <div>
-                <img src="https://place-puppy.com/200x300" alt="A curious puppy">
+                <img src="https://place-puppy.com/100x100" alt="A curious puppy">
             </div>
             <div>
                 <strong>Puppy</strong>
@@ -76,7 +93,7 @@
             <div>
                 <a href="Your choice of link">More Puppies Here!</a>
             </div>
-        </span><!-- TODO: Spans for four-item wide mini-layout -->
+        </span>
     </div>
   </body>
 </html>
